--- a/tablestyle.css
+++ b/tablestyle.css
@@ -1,4 +1,6 @@
 .styled-table {
+    text-align: center; 
+    vertical-align: middle;
     margin: 25px 0;
     font-size: 0.9em;
     font-family: sans-serif;
